# parallel-programming

./: .gitignore  CMakeLists.txt  HW1.cpp  HW2.cpp  Homework1.cpp  Homework1.h  Seminar3.cpp  main.cpp
Homeworks/: Homework1.cpp  Homework3.cpp  Homeworks.h
MPI/: CMakeLists.txt  main.cpp
MPI/Homeworks/: Homeworks.h
MPI/Seminars/: Seminar12.cpp  Seminar13.cpp  Seminar14.cpp  Seminar8.cpp  Seminars.h
OMP/: CMakeLists.txt  main.cpp
OMP/Homeworks/: Homework2.cpp
OMP/Seminars/: Seminar11.cpp  Seminar3.cpp  Seminar6.cpp  Seminar7.cpp  Seminars.h
Seminars/: Seminar4.cpp  Seminar5.cpp  Seminars.h
